WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
251124
Potential race condition for m_clobberingTailCalls in WasmModuleInformation.h
https://bugs.webkit.org/show_bug.cgi?id=251124
Summary
Potential race condition for m_clobberingTailCalls in WasmModuleInformation.h
Yijia Huang
Reported
2023-01-24 16:03:43 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-01-24 18:49:32 PST
<
rdar://problem/104630073
>
Yijia Huang
Comment 2
2023-01-24 18:50:11 PST
<
rdar://problem/104630073
>
Yijia Huang
Comment 3
2023-01-25 09:11:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/9122
EWS
Comment 4
2023-01-25 11:02:51 PST
Committed
259374@main
(dcd4969cfb75): <
https://commits.webkit.org/259374@main
> Reviewed commits have been landed. Closing PR #9122 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug